--- a/style.css
+++ b/style.css
@@ -1,190 +1,248 @@
-    @import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap');
-    body,
-    p,
-    h1,
-    ul,
-    li {
+@import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap');
+body,
+p,
+h1,
+ul,
+li {
+    margin: 0px;
+    padding: 0px;
+    list-style: none;
+    font-size: 18px;
+    font-family: "Bai Jamjuree";
+}
+
+ :root {
+    --cor-ciano-forte: hsl(171, 66%, 44%);
+    --cor-box: hsl(171deg 28% 42%);
+    --cor-azul-claro: hsl(233, 100%, 69%);
+    --cor-azul-acinzentado-escuro: hsl(210, 10%, 33%);
+    --cor-azul-acinzentado: hsl(201, 11%, 66%);
+}
+
+#container-geral {
+    margin: 12px;
+}
+
+.imagem-principal {
+    width: 100%;
+}
+
+.flex-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.content-imagem {
+    background-image: url(./images/bg-header-mobile.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.logo-imagem {
+    margin: 70px 0px;
+}
+
+h1 {
+    font-size: 1.9em;
+    color: var(--cor-azul-acinzentado-escuro);
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.texto {
+    color: var(--cor-azul-acinzentado);
+    text-align: center;
+    line-height: 30px;
+    margin-bottom: 60px;
+}
+
+.btn {
+    background: var(--cor-ciano-forte);
+    color: white;
+    text-align: center;
+    border-radius: 30px;
+    box-shadow: 2px 4px 4px var(--cor-box);
+    width: 300px;
+    height: 60px;
+    display: block;
+    text-decoration: none;
+    line-height: 60px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.btn-mac {
+    background: var(--cor-azul-claro);
+    color: white;
+    text-align: center;
+    border-radius: 30px;
+    box-shadow: 2px 3px 1px var(--cor-azul-acinzentado-escuro);
+    width: 300px;
+    height: 60px;
+    display: block;
+    text-decoration: none;
+    line-height: 60px;
+    margin-top: 10px;
+    margin-bottom: 100px;
+}
+
+.altura-secao {
+    margin-top: 30px;
+}
+
+#icon-svg {
+    margin-bottom: 30px;
+    width: 50px;
+}
+
+.imagem-digital {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: auto;
+    margin-top: 60px;
+}
+
+.imagem-digital img {
+    width: 150px;
+    margin-bottom: 70px;
+}
+
+.footer-contatos {
+    margin-top: 100px;
+}
+
+.contatos {
+    background-color: hsl(171deg 11% 94%);
+    width: 100vw;
+    height: auto;
+    text-align: center;
+    text-decoration: none;
+    color: var(--cor-azul-acinzentado-escuro);
+    line-height: 60px;
+}
+
+#images-footer {
+    width: 60px;
+    margin-top: 50px;
+}
+
+.rede-social {
+    margin-top: 30px;
+}
+
+.rede-social svg {
+    margin-inline-end: 20px;
+}
+
+@media (min-width:1023px) {
+    .image-desktop {
+        width: 60%;
+    }
+    .container-geral {
         margin: 0px;
-        padding: 0px;
-        list-style: none;
-        font-size: 18px;
-        font-family: "Bai Jamjuree";
     }
-    
-     :root {
-        --cor-ciano-forte: hsl(171, 66%, 44%);
-        --cor-box: hsl(171deg 28% 42%);
-        --cor-azul-claro: hsl(233, 100%, 69%);
-        --cor-azul-acinzentado-escuro: hsl(210, 10%, 33%);
-        --cor-azul-acinzentado: hsl(201, 11%, 66%);
+    .conteudo-button {
+        display: flex;
+        gap: 15px;
     }
-    
-    #container-geral {
-        margin: 12px;
+    .texto-left {
+        text-align: left;
+        align-items: flex-start;
     }
-    
-    .imagem-principal {
-        width: 100%;
+    h1 {
+        text-align: left;
     }
-    
-    .flex-content {
+    .h1-access {
+        margin-top: 3em;
+    }
+    .texto {
+        margin-bottom: 15px;
+    }
+    .p-access {
+        margin-bottom: 6em;
+        width: 50%;
+    }
+    .texto-historia {
+        width: 50%;
+    }
+    .conteudo-keel {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+    .conteudo-keel p {
+        margin: 0px 16em 3em;
+    }
+    .monitor {
+        display: flex;
+        gap: 122px;
+    }
+    .monitor-conteudo {
         display: flex;
         flex-direction: column;
-        align-items: center;
+        margin-top: 35px;
     }
-    
-    .content-imagem {
-        background-image: url(./images/bg-header-mobile.png);
-        background-repeat: no-repeat;
-        background-size: cover;
+    .imagem-principal {
+        margin-left: -45px;
     }
-    
-    .logo-imagem {
-        margin: 70px 0px;
+    .section-icon {
+        display: flex;
+        margin: 0px 2em;
     }
-    
-    h1 {
-        font-size: 1.9em;
-        color: var(--cor-azul-acinzentado-escuro);
-        text-align: center;
-        margin-bottom: 30px;
+    .texto-icons {
+        width: 70%;
     }
-    
-    .texto {
-        color: var(--cor-azul-acinzentado);
-        text-align: center;
-        line-height: 30px;
-        margin-bottom: 60px;
-    }
-    
-    .btn {
-        background: var(--cor-ciano-forte);
-        color: white;
-        text-align: center;
-        border-radius: 30px;
-        box-shadow: 2px 4px 4px var(--cor-box);
-        width: 300px;
-        height: 60px;
-        display: block;
-        text-decoration: none;
-        line-height: 60px;
-        margin-top: 10px;
-        margin-bottom: 10px;
-    }
-    
-    .btn-mac {
-        background: var(--cor-azul-claro);
-        color: white;
-        text-align: center;
-        border-radius: 30px;
-        box-shadow: 2px 3px 1px var(--cor-azul-acinzentado-escuro);
-        width: 300px;
-        height: 60px;
-        display: block;
-        text-decoration: none;
-        line-height: 60px;
-        margin-top: 10px;
-        margin-bottom: 100px;
-    }
-    
-    .altura-secao {
-        margin-top: 30px;
-    }
-    
-    #icon-svg {
-        margin-bottom: 30px;
-        width: 50px;
-    }
-    
     .imagem-digital {
         display: flex;
-        flex-direction: column;
-        align-items: center;
-        height: auto;
-        margin-top: 60px;
+        flex-direction: row;
+        justify-content: space-evenly;
     }
-    
-    .imagem-digital img {
-        width: 150px;
-        margin-bottom: 70px;
+    .section-ios {
+        display: flex;
+        gap: 30px;
     }
-    
-    .footer-contatos {
-        margin-top: 100px;
+    .texto-footer {
+        width: 50%;
     }
-    
     .contatos {
-        background-color: hsl(171deg 11% 94%);
-        width: 100vw;
-        height: auto;
-        text-align: center;
-        text-decoration: none;
-        color: var(--cor-azul-acinzentado-escuro);
-        line-height: 60px;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
     }
-    
-    #images-footer {
-        width: 60px;
-        margin-top: 50px;
-    }
-    
     .rede-social {
-        margin-top: 30px;
+        display: flex;
     }
-    
-    .rede-social img {
-        margin-inline-end: 20px;
+    ul {
+        display: flex;
+        flex-wrap: wrap;
     }
-    
-    @media (min-width:1023px) {
-        .image-desktop {
-            width: 60%;
-        }
-        .container-geral {
-            margin: 0px;
-        }
-        .conteudo-button {
-            display: flex;
-            gap: 15px;
-        }
-        .texto-left {
-            text-align: left;
-            align-items: flex-start;
-        }
-        h1 {
-            text-align: left;
-        }
-        .h1-access {
-            margin-top: 3em;
-        }
-        .texto {
-            margin-bottom: 15px;
-        }
-        .p-access {
-            margin-bottom: 6em;
-            width: 50%;
-        }
-        .texto-historia {
-            width: 50%;
-        }
-        .conteudo-keel {
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-        }
-        .conteudo-keel p {
-            margin: 0px 16em 3em;
-        }
-        .monitor {
-            display: flex;
-            gap: 122px;
-        }
-        .monitor-conteudo {
-            display: flex;
-            flex-direction: column;
-            margin-top: 35px;
-        }
-        .imagem-principal {
-            margin-left: -45px;
-        }
+    li {
+        flex: 0 1 33%;
     }
+    .order-1 {
+        order: 1;
+    }
+    .order-2 {
+        order: 2;
+    }
+    .order-3 {
+        order: 3;
+    }
+    .order-4 {
+        order: 4;
+    }
+    .order-4:hover {
+        color: var(--cor-ciano-forte);
+        cursor: pointer;
+    }
+    .order-5 {
+        order: 5;
+    }
+    .twitter-svg:hover {
+        color: var(--cor-ciano-forte);
+        cursor: pointer;
+        transition: 0.3s ease-in;
+    }
+}
