--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ h1 {
     margin-top: 30px;
 }
 
-#icon-svg {
+.icon-svg {
     margin-bottom: 30px;
     width: 50px;
 }
@@ -123,7 +123,7 @@ h1 {
     line-height: 60px;
 }
 
-#images-footer {
+.images-footer {
     width: 60px;
     margin-top: 50px;
 }
@@ -224,11 +224,27 @@ h1 {
     .order-1 {
         order: 1;
     }
+    .order-1:hover {
+        color: var(--cor-ciano-forte);
+        cursor: pointer;
+    }
     .order-2 {
         order: 2;
     }
+    .order-2:hover {
+        color: var(--cor-ciano-forte);
+        cursor: pointer;
+    }
+    .order-2:hover {
+        color: var(--cor-ciano-forte);
+        cursor: pointer;
+    }
     .order-3 {
         order: 3;
+    }
+    .order-3:hover {
+        color: var(--cor-ciano-forte);
+        cursor: pointer;
     }
     .order-4 {
         order: 4;
@@ -240,7 +256,15 @@ h1 {
     .order-5 {
         order: 5;
     }
-    .twitter-svg:hover {
+    .order-5:hover {
+        color: var(--cor-ciano-forte);
+        cursor: pointer;
+    }
+    .order-:hover {
+        color: var(--cor-ciano-forte);
+        cursor: pointer;
+    }
+    .hover-icon:hover {
         color: var(--cor-ciano-forte);
         cursor: pointer;
         transition: 0.3s ease-in;
