--- a/style.css
+++ b/style.css
@@ -27,11 +27,11 @@ li {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 50px;
+    padding-top: 70px;
 }
 
 .content-imagem {
-    background-image: url(./images/bg-header-mobile.png);
+    background-image: linear-gradient(to bottom, transparent 0%, #fff 70%), url(./images/bg-header-mobile.png);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -44,6 +44,19 @@ h1 {
     font-size: 1.9em;
     color: var(--cor-azul-acinzentado-escuro);
     text-align: center;
+    margin-bottom: 30px;
+}
+
+h2 {
+    color: var(--cor-azul-acinzentado-escuro);
+    text-align: center;
+    margin-bottom: 30px;
+    font-size: 1.9em;
+}
+
+h3 {
+    text-align: center;
+    color: var(--cor-azul-acinzentado-escuro);
     margin-bottom: 30px;
 }
 
@@ -60,7 +73,7 @@ h1 {
     text-align: center;
     border-radius: 30px;
     box-shadow: 2px 4px 4px var(--cor-box);
-    width: 300px;
+    width: 250px;
     height: 60px;
     display: block;
     text-decoration: none;
@@ -75,7 +88,7 @@ h1 {
     text-align: center;
     border-radius: 30px;
     box-shadow: 2px 3px 1px var(--cor-azul-acinzentado-escuro);
-    width: 300px;
+    width: 250px;
     height: 60px;
     display: block;
     text-decoration: none;
@@ -133,8 +146,8 @@ h1 {
 }
 
 @media (min-width:1023px) {
-    .image-desktop {
-        width: 60%;
+    .imagem-desktop {
+        width: 70%;
     }
     .container-geral {
         margin: 0px;
@@ -150,11 +163,14 @@ h1 {
     h1 {
         text-align: left;
     }
+    h3 {
+        margin-bottom: 0px;
+    }
     .h1-access {
         margin-top: 3em;
     }
     .texto {
-        margin-bottom: 15px;
+        margin-bottom: 10px;
     }
     .p-access {
         margin-bottom: 6em;
@@ -171,17 +187,21 @@ h1 {
     .conteudo-keel p {
         margin: 0px 16em 3em;
     }
+    .altura-secao {
+        padding-top: 0px;
+    }
     .monitor {
         display: flex;
         gap: 122px;
+        margin-bottom: 0px;
+        padding-top: 0px;
     }
     .monitor-conteudo {
-        display: flex;
-        flex-direction: column;
         margin-top: 35px;
     }
     .imagem-principal {
         margin-left: -45px;
+        width: 50%;
     }
     .section-icon {
         display: flex;
