--- a/style.css
+++ b/style.css
@@ -103,7 +103,6 @@ h3 {
 
 .icon-svg {
     margin-bottom: 30px;
-    width: 50px;
 }
 
 .imagem-digital {
@@ -152,7 +151,7 @@ h3 {
         background-size: cover;
     }
     .imagem-desktop {
-        width: 70%;
+        width: 65%;
     }
     .container-geral {
         margin: 0px;
@@ -169,7 +168,7 @@ h3 {
         text-align: left;
     }
     h3 {
-        margin-bottom: 0px;
+        margin-bottom: 10px;
     }
     .h1-access {
         margin-top: 3em;
@@ -185,12 +184,7 @@ h3 {
         width: 50%;
     }
     .conteudo-keel {
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-    }
-    .conteudo-keel p {
-        margin: 0px 16em 3em;
+        margin: 0 25% 5%;
     }
     .altura-secao {
         padding-top: 0px;
@@ -203,6 +197,7 @@ h3 {
     }
     .monitor-conteudo {
         margin-top: 35px;
+        flex: 0 1 27%;
     }
     .imagem-principal {
         margin-left: -45px;
@@ -210,10 +205,11 @@ h3 {
     }
     .section-icon {
         display: flex;
-        margin: 0px 2em;
+        justify-content: center;
+        gap: 20px;
     }
-    .texto-icons {
-        width: 70%;
+    .section-icon section {
+        flex: 0 1 28%;
     }
     .imagem-digital {
         display: flex;
@@ -289,5 +285,8 @@ h3 {
         color: var(--cor-ciano-forte);
         cursor: pointer;
         transition: 0.3s ease-in;
+    }
+    .footer-contatos {
+        margin-top: 0px;
     }
 }
