--- a/style.css
+++ b/style.css
@@ -207,6 +207,7 @@ h3 {
         display: flex;
         justify-content: center;
         gap: 20px;
+        margin-bottom: 7em;
     }
     .section-icon section {
         flex: 0 1 28%;
