--- a/style.css
+++ b/style.css
@@ -178,6 +178,7 @@ h3 {
         background-image: linear-gradient(to bottom, transparent 0%, #fff 70%), url(./images/bg-header-mobile.png);
         background-repeat: no-repeat;
         background-size: cover;
+        padding-top: 10em;
     }
     .imagem-desktop {
         width: 65%;
@@ -207,6 +208,7 @@ h3 {
     }
     .p-access {
         width: 50%;
+        margin-bottom: 5em;
     }
     .texto-historia {
         width: 50%;
@@ -284,6 +286,8 @@ h3 {
         display: flex;
         justify-content: space-evenly;
         align-items: center;
+        line-height: 40px;
+        text-align: left;
     }
     .rede-social {
         display: flex;
