--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@ li {
     list-style: none;
     font-size: 18px;
     font-family: "Bai Jamjuree";
+    box-sizing: border-box;
+    max-width: 100vw;
+    height: auto;
 }
 
  :root {
@@ -150,7 +153,7 @@ h3 {
 
 .contatos {
     background-color: hsl(171deg 11% 94%);
-    width: 100vw;
+    width: 100%;
     text-align: center;
     text-decoration: none;
     color: var(--cor-azul-acinzentado-escuro);
@@ -193,9 +196,6 @@ h3 {
     .texto-left {
         text-align: left;
         align-items: flex-start;
-    }
-    h1 {
-        text-align: left;
     }
     h3 {
         margin-bottom: 10px;
@@ -284,10 +284,9 @@ h3 {
     }
     .contatos {
         display: flex;
+        align-items: center;
         justify-content: space-evenly;
-        align-items: stretch;
         line-height: 40px;
-        text-align: left;
     }
     .rede-social {
         display: flex;
