--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ li {
 }
 
 .container-geral {
-    margin: 0px 20px;
+    padding: 0px 20px;
 }
 
 .imagem-principal {
@@ -148,7 +148,7 @@ h3 {
 }
 
 .footer-contatos {
-    margin-top: 100px;
+    margin-top: 50px;
 }
 
 .contatos {
@@ -161,8 +161,8 @@ h3 {
 }
 
 .images-footer {
-    width: 60px;
-    margin-top: 50px;
+    width: 50px;
+    padding-top: 40px;
 }
 
 .rede-social {
