--- a/style.css
+++ b/style.css
@@ -154,6 +154,7 @@ h3 {
 .contatos {
     background-color: hsl(171deg 11% 94%);
     width: 100%;
+    height: auto;
     text-align: center;
     text-decoration: none;
     color: var(--cor-azul-acinzentado-escuro);
